--- a/.github/workflows/sync-scholar.yml
+++ b/.github/workflows/sync-scholar.yml
@@ -32,9 +32,13 @@ jobs:
         run: |
           python scripts/generate_publications_html.py
 
+      - name: Extract and update collaborators
+        run: |
+          python scripts/extract_collaborators.py
+
       - name: Commit and push if changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add data/publications.json publications_auto.html
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update publications from Google Scholar [$(date +'%Y-%m-%d')]" && git push)
+          git add data/publications.json data/collaborators.json publications_auto.html
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update publications and collaborators from Google Scholar [$(date +'%Y-%m-%d')]" && git push)
