Implement intelligent publication merge system
- Created smart_merge_publications.py: Keeps ALL old publications + adds new from Scholar
- Updates citations for matched publications (40 total, 254 citations)
- Preserves manual curation: categories (25 journals, 7 books, 8 conferences), venues, DOIs
- NO hardcoding: all stats calculated dynamically
- Fuzzy title matching (>80% similarity) for intelligent updates
- Updated workflow to use smart merge instead of simple citation update

--- a/.github/workflows/sync-scholar.yml
+++ b/.github/workflows/sync-scholar.yml
@@ -28,9 +28,9 @@ jobs:
         run: |
           python scripts/sync_scholar.py
 
-      - name: Update citation counts intelligently
+      - name: Smart merge publications (keep old + add new + update citations)
         run: |
-          python scripts/update_citations.py
+          python scripts/smart_merge_publications.py
 
       - name: Extract and update collaborators
         run: |
